infrastructure/kgateway/httproute-chihiro.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chihiro
  namespace: kgateway-system
spec:
  parentRefs:
    - name: https-external
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "chihiro.rpcu.io"
  rules:
    - backendRefs:
        - name: chihiro-mgmt
          kind: Backend
          group: gateway.kgateway.dev
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: chihiro.mgmt.rpcu.lan
