infrastructure/kgateway/httproute-openchoreo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openchoreo-webhook
  namespace: kgateway-system
spec:
  parentRefs:
    - name: https-external
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "openchoreo.rpcu.io"
  rules:
    - matches:
        - method: POST
          path:
            type: Exact
            value: /api/v1alpha1/autobuild
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: api.platform.rpcu.lan
      backendRefs:
        - name: openchoreo-platform
          kind: Backend
          group: gateway.kgateway.dev
